syntax = "proto3";
package rollapp.mint.v1beta1;

option go_package = "github.com/dymensionxyz/dymension-rdk/x/mint/types";

import "gogoproto/gogo.proto";

// Minter represents the minting state.
message Minter {
  string current_inflation_rate = 1 [
    (gogoproto.moretags) = "yaml:\"current_inflation_rate\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
}
