syntax = "proto3";
package rollapp.params.types;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "rollappparams/params.proto";

option go_package = "github.com/dymensionxyz/dymension-rdk/x/rollappparams/types";

// Query provides defines the gRPC querier service.
service Query {
  // Params returns the total set of rollapp parameters.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/rollappparams/params";
  }

}

// QueryParamsRequest is the request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is the response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params defines the parameters of the module.
  Params params = 1 [ (gogoproto.nullable) = false ];
}

